--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   background-position: top center;
 }
 
+.border
+{
+  border-radius: 50%;
+}
 .container {
   max-width: 928px;
   margin: 0 auto;
@@ -61,6 +65,7 @@ body {
   font-size: 88px;
   line-height: 96px;
   font-weight: 400;
+ 
 }
 
 .hero-image p {
